feat: 新增多款时钟，优化插入的按钮样式

--- a/index.html
+++ b/index.html
@@ -24,31 +24,86 @@
     <![endif]-->
     <section class="section">
       <div class="container">
-        <article class="message">
+        <article class="message is-primary">
           <div class="message-header">
-            <p>Hello World</p>
-            <button class="delete" aria-label="delete"></button>
+            <p>桌面时钟</p>
+            <a href="https://github.com/wb121017405/display">
+              <img src="https://github.githubassets.com/favicons/favicon.png" />
+            </a>
           </div>
           <div class="message-body">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+            🕘
+            点击选择时钟，建议使用能全屏的浏览器（Safari横屏竖屏切换后地址栏很小）
           </div>
         </article>
-        <button class="button">123</button>
+
         <div class="columns">
           <a class="column" href="/clocks/1/index.html">
             <figure class="image is-16by9">
-              <img src="https://bulma.io/images/placeholders/128x128.png">
+              <img src="/assets/clocks/1.png" />
             </figure>
           </a>
-          <div class="column">
-            Second column
-          </div>
-          <div class="column">
-            Third column
-          </div>
-          <div class="column">
-            Fourth column
-          </div>
+          <a class="column" href="/clocks/2/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/2.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/3/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/3.png" />
+            </figure>
+          </a>
+        </div>
+        <div class="columns">
+          <a class="column" href="/clocks/4/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/4.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/5/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/5.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/6/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/6.png" />
+            </figure>
+          </a>
+        </div>
+        <div class="columns">
+          <a class="column" href="/clocks/7/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/7.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/8/index.html#more-breathe">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/8.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/9/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/9.png" />
+            </figure>
+          </a>
+        </div>
+        <div class="columns">
+          <a class="column" href="/clocks/10/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/10.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/11/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/11.png" />
+            </figure>
+          </a>
+          <a class="column" href="/clocks/12/index.html">
+            <figure class="image is-16by9">
+              <img src="/assets/clocks/12.png" />
+            </figure>
+          </a>
         </div>
       </div>
     </section>
