feat: 新增放大按钮

--- a/template.html
+++ b/template.html
@@ -1,5 +1,6 @@
 <div class="navContainer">
   <a class="navbar-item" href="https://suoshuo.top">🧭 摆件首页 </a>
   <a class="navbar-item" href="/">🕘 选择其他桌面时钟 </a>
-  <div class="navbar-item" href="/">❌ 点击屏幕隐藏导航 </div>
+  <div class="navbar-item handleZoom">🔍 放大 </div>
+  <div class="navbar-item">❌ 点击屏幕隐藏导航 </div>
 </div>
